package thuchanh.B1_Decorator;

public abstract class BieuThuc {
    public abstract float giaTri();

    public abstract String bieuThuc();
}
